# greifhaus-parser

./: .gitignore  README.md  setup.cfg
extra/: influx.yml
src/gymscraper/: config.py  controller.py  main.py  parser.py  scraper.py
