[metadata]
name = gymscraper
version = 0.1.0

[options]
packages = find:
package_dir =
    =src
install_requires =
    beautifulsoup4
    httpx
    influxdb
    lxml
    pydantic
    toml

[options.packages.find]
where = src
include = *

[options.entry_points]
console_scripts =
    gymscraper = gymscraper.main:main
